# books-backend

./: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/app/: main.py
src/app/api/: book.py  root.py
src/app/core/: config.py  database.py  lifespan.py
src/app/core/migrations/: env.py
src/app/core/migrations/versions/: 55431c2ad146_models_for_books.py  7a118edc5828_add_models_for_books.py  e0e5e2f0ef48_initial_migration.py
src/app/models/: __init__.py  association.py  author.py  base.py  book.py  genre.py
