[project]
name = "app"
version = "0.1.0"

requires-python = ">=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app", from = "src" }
]


[tool.poetry.dependencies]
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
gunicorn = "^23.0.0"
alembic = "^1.16.4"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["C", "E", "F", "W"]

[tool.ruff.format]
quote-style = "single"
